balance method added
